--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Agency</title>
     <link rel="stylesheet" href="css/style.css">
+    <!--    Poppins-google-fonts    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700:800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="hero">
+        <img src="imgs/triangle-top.png" class="triangle1">
+        <img src="imgs/triangle-left.png" class="triangle2">
+        <img src="imgs/circle.png" class="circle">
+        <nav>
+            <img src="imgs/logo.svg" class="logo">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Clients</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <a href="" class="btn">Get a Quote</a>
+        </nav>
+        <div class="row">
+            <div class="col-1">
+                    <img src="imgs/Tasks.svg" class="image">
+                    <img src="imgs/elements.png" class="elements">
+            </div>
+            <div class="col-2">
+                <h1>Creative <br><span>Developers</span> Agency</h1>
+                <p>This es a demos text wich you can edit or replace
+                   with your own text anytime. This is a demo text which you can
+                edit or replace with your own text anytime.</p>
+                <a href="" class="btn">Learn More</a> <a href="">or Contact</a>
+            </div>
+        </div>
+    </div>
   
     <script src="js/scripts.js"></script>
 </body>
